force-app/main/default/objects/BMCServiceDesk__BMC_Media__c/BMCServiceDesk__BMC_Media__c.object-meta.xml
<CustomObject>
    <description>Class that stores information about devices on which data can be stored, such as hard disks, floppy disks, CD-ROMs, and tapes. This class corresponds to the DMTF CIM_PhysicalMedia class.</description>
    <label>Media</label>
    <nameField>
        <label>BMC_Media Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>