force-app/main/default/objects/BMCServiceDesk__BMC_Media__c/fields/BMCServiceDesk__DriveSCSITargetID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__DriveSCSITargetID__c</fullName>
    <label>Drive SCSI Target ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>