force-app/main/default/objects/BMCServiceDesk__BMC_Media__c/fields/BMCServiceDesk__DriveSize__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__DriveSize__c</fullName>
    <label>Drive Size</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>