force-app/main/default/objects/BMCServiceDesk__BMC_Media__c/fields/BMCServiceDesk__MediaType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__MediaType__c</fullName>
    <label>Media Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Removable media</fullName>
            </value>
            <value>
                <fullName>Fixed hard disk</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>