force-app/main/default/objects/BMCServiceDesk__BMC_Media__c/fields/BMCServiceDesk__NumberOfMediaSupported__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__NumberOfMediaSupported__c</fullName>
    <label>Number Of Media Supported</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>